# haskell-src

./: .gitignore  .travis.yml  CONTRIBUTING.md  Makefile  Makefile.nhc98  README.md  Setup.description  cabal.haskell-ci  cabal.project  changelog.md  haskell-src.cabal  haskell-src.conf.in  package.conf.in  prologue.txt  stack-ghc-8.4.yaml  stack-ghc-8.6.yaml  stack-ghc-8.8.yaml  test-build.sh
.github/workflows/: add-ghcup-prerelease-channel.patch  haskell-ci.yml
Language/Haskell/: Lexer.hs  ParseMonad.hs  ParseUtils.hs  Parser.ly  Pretty.hs  Syntax.hs  TH.hs  THSyntax.hs
Language/Haskell/TH/: Ppr.hs  PprLib.hs  THInternals.hs  THLib.hs  THSyntax.hs
attic/: haskell-src-1.0.3.0-r2.cabal  haskell-src-1.0.3.0-r3.cabal  haskell-src-1.0.3.1-r2.cabal  haskell-src-1.0.3.1-r5.cabal  stackage-badges.md
examples/: Makefile  hsparser.hs
hugs/: exclude
