name:           haskell-src
-- don't forget to update the changelog.md!
version:        1.0.2.0
license:        BSD3
license-file:   LICENSE
author:         Simon Marlow, Sven Panne and Noel Winstanley
-- Maintained through https://github.com/haskell-pkg-janitors. Join us!
maintainer:     Herbert Valerio Riedel <hvr@gnu.org>
bug-reports:    https://github.com/haskell-pkg-janitors/haskell-src/issues
category:       Language
synopsis:       Support for manipulating Haskell source code
description:
    The 'haskell-src' package provides support for manipulating Haskell
    source code. The package provides a lexer, parser and
    pretty-printer, and a definition of a Haskell abstract syntax tree
    (AST). Common uses of this package are to parse or generate Haskell
    98 code.
build-type:     Simple
cabal-version:  >=1.6

extra-source-files: changelog.md

flag split-base

source-repository head
    type:     git
    location: https://github.com/haskell-pkg-janitors/haskell-src.git

library
  exposed-modules:
        Language.Haskell.Lexer,
        Language.Haskell.Parser,
        Language.Haskell.ParseMonad,
        Language.Haskell.Pretty,
        Language.Haskell.Syntax,
        Language.Haskell.ParseUtils

  if flag(split-base)
    build-depends:      base >= 4 && < 5, syb, pretty, array
  else
    build-depends:      base < 3

  build-tools: happy

  extensions:   CPP
  nhc98-options:        -K11M
  ghc-options:          -Wall -O2
